добавлены запросы обновления пароля, добавления пользователя
